app/src/main/java/com/example/desafio/domain/commons/errors/EmptyResponseBody.kt
package com.example.desafio.domain.commons.errors

class EmptyResponseBody : Exception() {
}